--- a/assets/css/phoenix.css
+++ b/assets/css/phoenix.css
@@ -23,7 +23,7 @@ body {
 /* Customize container */
 @media (min-width: 768px) {
   .container {
-    max-width: 768px;
+    /* max-width: 768px; */
   }
 }
 .container-narrow > hr {
